Update #8 - EventService, PlaceService - Querydsl 적용 후 로직 수정